fixed scrollbar

--- a/src/components/OSFileExplorer/osfileexplorer.module.css
+++ b/src/components/OSFileExplorer/osfileexplorer.module.css
@@ -24,7 +24,6 @@
     margin-top: 5px;
     display: flex;
     flex-direction: row;
-    overflow: scroll;
 }
 
 .explorerIndex{
